@@ -12,20 +12,8 @@
  * @version		$Id: image-edit.php 1244 2008-03-18 17:09:11Z real_therplima $
  */
 $xoopsOption ['nodebug'] = 1;
-if (file_exists ( '../../../../../../../mainfile.php' ))
-	include_once '../../../../../../../mainfile.php';
-if (file_exists ( '../../../../../../mainfile.php' ))
-	include_once '../../../../../../mainfile.php';
-if (file_exists ( '../../../../../mainfile.php' ))
-	include_once '../../../../../mainfile.php';
-if (file_exists ( '../../../../mainfile.php' ))
-	include_once '../../../../mainfile.php';
-if (file_exists ( '../../../mainfile.php' ))
-	include_once '../../../mainfile.php';
 if (file_exists ( '../../mainfile.php' ))
 	include_once '../../mainfile.php';
-if (file_exists ( '../mainfile.php' ))
-	include_once '../mainfile.php';
 if (! defined ( 'XOOPS_ROOT_PATH' ))
 	exit ();
 
@@ -74,19 +62,19 @@ if (! is_null ( $target ) && ! is_null ( $type )) {
 
 if (! is_null ( $op ) && $op == 'cancel') {
 	$image_path = isset ( $_GET ['image_path'] ) ? $_GET ['image_path'] : null;
-	
+
 	if (file_exists ( $image_path )) {
 		@unlink ( $image_path );
 	}
-	
+
 	$arr = explode ( '/', $image_path );
 	$arr [count ( $arr ) - 1] = 'orig_' . substr ( $arr [count ( $arr ) - 1], 5, strlen ( $arr [count ( $arr ) - 1] ) );
 	$orig_img_path = implode ( '/', $arr );
-	
+
 	if (file_exists ( $orig_img_path )) {
 		@unlink ( $orig_img_path );
 	}
-	
+
 	$plugins_arr = XoopsLists::getDirListAsArray ( ICMS_LIBRARIES_PATH . '/image-editor/plugins' );
 	foreach ( $plugins_arr as $plugin_folder ) {
 		if (file_exists ( ICMS_LIBRARIES_PATH . '/image-editor/plugins/' . $plugin_folder . '/icms_plugin_version.php' )) {
@@ -109,17 +97,17 @@ if (! is_null ( $op ) && $op == 'save') {
 	$simage_display = isset ( $_GET ['image_display'] ) ? $_GET ['image_display'] : null;
 	$simage_temp = isset ( $_GET ['image_temp'] ) ? $_GET ['image_temp'] : null;
 	$soverwrite = isset ( $_GET ['overwrite'] ) ? $_GET ['overwrite'] : 1;
-	
+
 	$image_handler = & xoops_gethandler ( 'image' );
 	$simage = & $image_handler->get ( $simage_id );
 	$imgcat_handler = xoops_gethandler ( 'imagecategory' );
 	$imagecategory = & $imgcat_handler->get ( $simage->getVar ( 'imgcat_id' ) );
-	
+
 	$categ_path = $imgcat_handler->getCategFolder ( $imagecategory );
 	$categ_path = (substr ( $categ_path, - 1 ) != '/') ? $categ_path . '/' : $categ_path;
 	$categ_url = $imgcat_handler->getCategFolder ( $imagecategory, 1, 'url' );
 	$categ_url = (substr ( $categ_url, - 1 ) != '/') ? $categ_url . '/' : $categ_url;
-	
+
 	if ($soverwrite) {
 		if ($imagecategory->getVar ( 'imgcat_storetype' ) == 'db') {
 			$fp = @fopen ( ICMS_IMANAGER_FOLDER_PATH . '/temp/' . $simage_temp, 'rb' );
@@ -173,7 +161,7 @@ if (! is_null ( $op ) && $op == 'save') {
 			$msg = _MD_AM_DBUPDATED;
 		}
 	}
-	
+
 	if (isset ( $_SESSION ['icms_imanager'] )) { //Image Editor open by some editor
 		$params = '?op=save_edit_ok&amp;imgcat_id=' . $simage->getVar ( 'imgcat_id' ) . '&amp;msg=' . urlencode ( $msg );
 		if (isset ( $_SESSION ['icms_imanager'] ['imedit_target'] )) {
